<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <Button
        android:id="@+id/homeHomeButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="70dp"
        android:layout_height="130dp"
        android:background="#4CAF50"
        android:backgroundTint="#4CAF50"
        android:padding="0dp"
        android:text="@string/home_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/homeGalleryButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="70dp"
        android:layout_height="130dp"
        android:background="#3F51B5"
        android:padding="0dp"
        android:text="@string/gallery_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeHomeButton" />

    <Button
        android:id="@+id/homeAboutButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="70dp"
        android:layout_height="130dp"
        android:background="#3F51B5"
        android:padding="0dp"
        android:text="@string/about_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeGalleryButton" />

    <Button
        android:id="@+id/homeBlank"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="70dp"
        android:layout_height="0dp"
        android:background="#3F51B5"
        android:checkable="false"
        android:clickable="false"
        android:padding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeAboutButton" />

    <Button
        android:id="@+id/takePhotoButton"
        android:layout_width="wrap_content"
        android:layout_height="57dp"
        android:layout_marginTop="70dp"
        android:text="@string/take_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toEndOf="@+id/homeGalleryButton"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/orView"
        android:layout_width="51dp"
        android:layout_height="39dp"
        android:layout_marginTop="44dp"
        android:text="@string/or"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toEndOf="@+id/homeAboutButton"
        app:layout_constraintTop_toBottomOf="@+id/takePhotoButton" />

    <Button
        android:id="@+id/uploadPhotoButton"
        android:layout_width="151dp"
        android:layout_height="147dp"
        android:layout_marginTop="40dp"
        android:background="#4CAF50"
        android:text="@string/upload_photo"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toEndOf="@+id/homeBlank"
        app:layout_constraintTop_toBottomOf="@+id/orView" />

    <ImageView
        android:id="@+id/checkImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="20dp"
        android:background="#492F2F"
        android:padding="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toEndOf="@+id/homeHomeButton"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_background"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/checkImageText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:text="@string/check_image"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/homeAboutButton"
        app:layout_constraintTop_toBottomOf="@+id/checkImage"
        tools:visibility="invisible" />

    <Button
        android:id="@+id/yesProcessButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/yes"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/noProcessButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/homeBlank"
        app:layout_constraintTop_toBottomOf="@+id/checkImageText" />

    <Button
        android:id="@+id/noProcessButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/no"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/yesProcessButton"
        app:layout_constraintTop_toBottomOf="@+id/checkImageText" />

</androidx.constraintlayout.widget.ConstraintLayout>