<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayActivity">

    <Button
        android:id="@+id/displayHomeButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="70dp"
        android:layout_height="130dp"
        android:background="#4CAF50"
        android:padding="0dp"
        android:text="@string/home_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/displayGalleryButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="70dp"
        android:layout_height="130dp"
        android:background="#3F51B5"
        android:padding="0dp"
        android:text="@string/gallery_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayHomeButton" />

    <Button
        android:id="@+id/displayAboutButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="70dp"
        android:layout_height="130dp"
        android:background="#3F51B5"
        android:padding="0dp"
        android:text="@string/about_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayGalleryButton" />

    <Button
        android:id="@+id/displayBlank"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="70dp"
        android:layout_height="0dp"
        android:background="#3F51B5"
        android:checkable="false"
        android:clickable="false"
        android:padding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayAboutButton" />

    <TextView
        android:id="@+id/displaySpeciesName"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:text="species_name_here"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/displayProbability"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/displayHomeButton"
        app:layout_constraintTop_toBottomOf="@+id/displayPhotoName" />

    <TextView
        android:id="@+id/displayProbability"
        android:layout_width="40dp"
        android:layout_height="42dp"
        android:layout_marginTop="40dp"
        android:text="N/A"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/displaySpeciesName"
        app:layout_constraintTop_toBottomOf="@+id/displayPhotoName" />

    <ImageView
        android:id="@+id/displayPhoto"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="40dp"
        android:background="#55312B"
        android:padding="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/displayAboutButton"
        app:layout_constraintTop_toBottomOf="@+id/displaySpeciesName"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/displaySpeciesDescription"
        android:layout_width="326dp"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/displayAboutButton"
        app:layout_constraintTop_toBottomOf="@+id/displayPhoto"
        tools:text="www.Wikipeadia.com/spider-species\n\n Put spider description here" />

    <Button
        android:id="@+id/displayDeleteButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/display_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/displayBlank"
        app:layout_constraintTop_toBottomOf="@+id/displayChangeNameButton" />

    <TextView
        android:id="@+id/displayPhotoName"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/displayHomeButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/displayChangeNameButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/display_change_name"
        app:layout_constraintBottom_toTopOf="@+id/displayDeleteButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/displayBlank"
        app:layout_constraintTop_toBottomOf="@+id/displaySpeciesDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>